--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "next": "16.0.9",
     "pg": "^8.16.3",
     "react": "19.2.1",
+    "react-autosave": "^0.5.0",
     "react-dom": "19.2.1",
     "react-icons": "^5.5.0"
   },
